--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,8 @@ agda/SkMonClo/formulae.agda
 agda/.DS_Store
 .lh/.lhignore
 .lh/LSFA/LSFA23-revised.tex.json
+LSFA/.lh/LSFA23-revised.tex.json
+LSFA/.lh/LSFA23-eptcs.tex.json
+LSFA/.lh/LSFA.bib.json
+LSFA/.lh/.lhignore
+agda/SkSymMonClo/.lh/.lhignore
